@@ -1,5 +1,13 @@
 2005-01-25  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-bookmarks.c:
+	- Fix #164858 (Don Scorgie)
+
+	* src/yelp-main.c:
+	- Fix #152852 (Don Scorgie, Kjartan Marass)
+
+2005-01-25  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-window.c:
 	- Changed copyright statement and a comment
 
